# dmesg-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md
rules/: default_rules.toml
src/: formatter.rs  main.rs  parser.rs  rules.rs
