[package]
name = "dmesg-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0"            # for terminal color output
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"               # to load the rule engine config
clap = { version = "4.5", features = ["derive"] } # for CLI args
inquire = "0.7.5"
pager = "0.16" 